# regexr

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml
CHANGELOG/: index.html
api/regexr/: index.html
api/regexr.string/: index.html
api/source/regexr/: index.html
api/source/regexr.string/: index.html
docs/: CHANGELOG.md  style.css
regexr/: __init__.py  string.py
search/: search_index.json
tests/: test_str.py
